--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
-langchain==0.2.16 
-langchain-core==0.2.38 
-langchain-community==0.2.16
-langchain-openai==0.1.23
-langchain-pinecone
-pinecone
-python-dotenv
-fastapi
-uvicorn
+anyio==4.6.2.post1
+fastapi==0.115.5
+gitdb==4.0.11
+huggingface-hub==0.26.2
+langchain==0.3.9
+langchain-community==0.3.9
+langchain-core==0.3.21
+langchain-openai==0.2.10
+langchain-pinecone==0.2.0
+langchain-text-splitters==0.3.2
+openai==1.55.3
+psycopg2==2.9.10
+pydantic==2.10.2
+python-dotenv==1.0.1
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+uvicorn==0.23.0
